--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@material-ui/core": "latest",
     "@material-ui/icons": "^4.9.1",
     "clsx": "latest",
+    "connect-mongo": "^3.2.0",
     "next": "latest",
+    "next-session": "^3.2.5",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest"
