--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.9.1",
     "clsx": "latest",
     "connect-mongo": "^3.2.0",
+    "heroku": "^7.42.13",
     "next": "latest",
     "next-session": "^3.2.5",
     "prop-types": "latest",
@@ -16,7 +17,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
+    "heroku-postbuild": "npm run build",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
   }
 }
