--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start -p $PORT",
+    "heroku-postbuild": "npm run dev",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
   }
 }
